# libbatchringbuffer

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench.c  benchmark.c  benchmark.h
docs/: CMakeLists_bak.txt  batchringbuffer_test.c  bench.cbak  bench.hbak  drone_io_settings.md  drone_io_settings.sh  makefile  makefile_src  makefile_test  notes.md  old_ringbuffer.c.txt  test_link.c
example/: CMakeLists.txt  example.c
src/: CMakeLists.txt  batchringbuffer.c  batchringbuffer.h
test/: CMakeLists.txt  CMakeLists_bak.txt  batchringbuffer_test.hpp  bench.hpp  given_a_4_4_4_batch_ring_buffer.hpp  given_a_4_batch_buffer.hpp  given_no_state.hpp  libbatchringbuffer_test.hpp  test.cpp
