set(TITLE batchringbuffer)

set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -pthread -D_REENTRANT -fPIC" )
set( SOURCES batchringbuffer.c )

FILE( GLOB LIBCMDLINE_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h" )
INSTALL( FILES ${LIBCMDLINE_HEADERS} DESTINATION include)

add_library(${TITLE} STATIC ${SOURCES})
INSTALL( TARGETS ${TITLE} DESTINATION lib )